app/static/style.css
/* ====================
 CSS VARIABLES
======================= */
:root {
    --black: #131313;
    --white: #FFFFFF;
    --bg-light: #EBF6F2;
    --bg-navbar: #DEDBFE;
    --bg-dark: #167973;
    --bg-activity-display: hsla(245, 100%, 95%, 0.9);
    --bg-completed: hsla(160, 36%, 88%, 1);
    --bg-notcompleted: hsla(246, 91%, 65%, 0.21);
    --bg-cell-hover: hsla(245, 100%, 96%, 0.7);
    --bg-cell-hover-dark: hsla(245, 100%, 93%, 0.7);
    --completed-color: hsla(176, 69%, 28%, 1);
    --notcompleted-color: hsla(246, 54%, 53%, 1);
    --content-bg-light: #D7ECE5;
    --attendance-bg:#FBE6CC;
    --link-color: #6354F7;
    --link-hover-color: #872CA7;
    --highlight-color: #6354F7;
    --btn-bright: #6354F7;
    --btn-bright-hover: #872CA7;
    --btn-activity-display: hsla(246, 91%, 65%, 1);
    --btn-activity-display-hover: hsla(246, 91%, 55%, 1);
    --btn-bg-color-light: #C7C4E3;
    --btn-edit: hsla(33, 85%, 89%, 1);
    --btn-details: hsla(220, 78%, 89%, 1);
    --btn-delete: hsla(3, 56%, 49%, 0.3);
    --btn-edit-hover: hsla(33, 85%, 79%, 1);
    --btn-details-hover: hsla(220, 78%, 79%, 1);
    --btn-delete-hover: hsla(3, 66%, 42%, 0.4);
    --alert-color: rgba(196, 61, 55, 0.3);
    --header-icon-hover-color: #872CA7;
    --border-light: #dee2e6;
    --border-dark: #167973;
}

*, *:before, *:after {
    box-sizing: border-box;
}

p {
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    padding: 0;
    background-color: var(--white);
    color: #131313;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

/* ====================
 TYPOGRAPHY
======================= */
a {
    text-decoration:none;
    color: var(--link-color);
    cursor: pointer;
}

a:hover, a:focus {
    color: var(--link-hover-color);
    text-decoration: none;
}


h1, h2, h3, h4 {
    font-family: "Lexend Deca", serif;
}

.heading {
    font-size: 3.3rem;
}

.heading-sans-serif {
    font-family: 'Lexend Deca', sans-serif;
}



/* ====================
 FLASH MESSAGE STYLES
======================= */

.info {
    color:  hsla(160, 36%, 28%, 1);
    background: hsla(160, 36%, 88%, 1);
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
}

.error, .message {
    color:  hsla(3, 56%, 39%, 1);
    background: hsla(3, 56%, 49%, 0.3);
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
}

/* ====================
 BUTTON & LINK STYLES
======================= */
.btn {
    border: unset;
    cursor: pointer;
}

.btn-form {
    border: none;
    width: 100%;
    background: var(--black);
}

.btn-form:hover, .btn-form:focus {
    background: var(--bg-dark);
    color: #FFF;
}

.btn-edit {
    background-color: var(--btn-edit);
    color: var(--black);
}

.btn-edit:hover, .btn-edit:focus {
    background-color: var(--btn-edit-hover);
}

.btn-details {
    background-color: var(--btn-details);
    color: var(--black); 
}

.btn-details:hover, .btn-details:focus {
    background-color: var(--btn-details-hover);
}

.btn-delete {
    background-color: var(--btn-delete);
    color: var(--black);
}

.btn-delete:hover, .btn-delete:focus {
    background-color: var(--btn-delete-hover);
}

.btn--dark {
    background: var(--black);
    color: #FFF;
    border: 2px solid var(--black);
    font-weight: 700;
}

.btn--dark:hover, .btn--dark:focus {
    background: #FFF;
    color: var(--black);
}

.btn--bright {
    background: var(--btn-bright);
    color: #FFF;
    font-weight: 700;
}

.btn--bright:hover, .btn--bright:focus {
    background: var(--btn-bright-hover);
    color: #FFF;
}

.btn-back {
    display: block;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.02em;
}

.controls-icon {
    margin-right: 0.5em;
}

/* ====================
 CUSTOM CHECKBOX STYLING
======================= */

.checkbox {
    display: inline-flex;
    align-items: center;
    cursor: pointer;
    margin: 1em 0 1.5em 0;
}

.checkbox__input {
    display: none;
}

.checkbox__box {
    width: 1.25em;
    height: 1.25em;
    border: 2px solid #ced4da;
    border-radius: 3px;
    display: flex;
    align-items: center;
    margin-right: 0.8em;
    justify-content: center;
    flex-shrink: 0;
    transition: background 150ms, border-color 150ms;
}

.checkbox__box::after {
    content: '\2714';
    color: #FFF;
    transform: scale(0); /* initially at 0% scale */
    transition: transform 150ms;
} 

/* when checkbox input is checked it will select checkbox__box element (sibling after checkbox) */
.checkbox__input:checked + .checkbox__box {
    background: var(--highlight-color);
    border-color: var(--highlight-color);
    transition: background 150ms, border-color 150ms;
}

.checkbox__input:checked + .checkbox__box::after {
    transform: scale(1);
    transition: transform 150ms;
}

/* ====================
 HEADER & NAV 
======================= */
.header-main {
    /* border: 1px solid green; */
    position: relative;
}

/* custom navbar styles */
.navbar-custom {
    padding: 2.7em 1.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar-logo {
    text-align: center;
    line-height: 0.8em;
}

.navbar-logo-text {
    font-family: 'Zilla Slab', serif;
    font-size: 2.2rem;
    color: #131313;
}

.navbar-logo-text:hover, .navbar-logo:focus {
    color: #167973;
}

.navbar-icon {
    background: #131313;
    color: #131313;
    border: unset;
    background: unset;
    font-size: 2.3rem;
    /* border: 1px solid pink; */
}

.navbar-icon:hover, .navbar-icon:focus {
    color: var(--header-icon-hover-color);
}

.navbar-panel {
    position: fixed;
    z-index: 1;
    background: var(--bg-navbar);
    top: 0;
    left: 0;
    height: 100vh;
    padding: 1.2em 0.6em;
    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
    transform: translateX(-100%);
    transition: transform .3s ease-in-out;
}

.navbar-icon--close {
    font-size: 2em;
    padding: 0;
    margin-left: 0.6em;
}

.navbar-panel-logo {
    margin-top: 1em;
}
/* ... */

